# DevZIP

./: .gitignore  LICENSE  README.css  README.html  README.md
apps/windows-ui/DevZip.App/: App.xaml  App.xaml.cs  DevZip.App.csproj  MainWindow.xaml  MainWindow.xaml.cs
apps/windows-ui/DevZip.App.Tests/: DevZip.App.Tests.csproj  MainWindowViewModelTests.cs
apps/windows-ui/DevZip.App/Converters/: InverseBooleanConverter.cs
apps/windows-ui/DevZip.App/Services/: CompressionJobRunner.cs  OutputPathPolicy.cs
apps/windows-ui/DevZip.App/ViewModels/: MainWindowViewModel.cs
benchmarks/: README.md  check_regression.py  run_all_types.py  run_benchmarks.py
benchmarks/manifests/: images-jpeg.json  images-png.json  images-raw.json  large-scale.json  mixed-large.json  ov-code.json  ov-exe.json  ov-jpeg.json  ov-mixed.json  ov-png.json  ov-text.json  random.json  software.json  text.json  video.json
benchmarks/tools/: build_overhaul_corpus.py  generate_datasets.py  generate_large_datasets.py  overhaul_sweep.ps1  rival_sweep.ps1  run_7zip_max.ps1  run_devzip_native.ps1  run_devzip_reference.ps1  run_windows_zip.ps1  run_winrar_max.ps1  run_winzip_best.ps1
docs/: dzcm-codec.md
docs/benchmarks/: baseline-results.md  competitive-landscape.md
docs/format/: dvz-format.md
docs/specs/: licensing.md  reference-pack-feasibility.md  windows-preservation.md
native/engine/: CMakeLists.txt
native/engine/include/devzip/: archive_format.h  backend.h  compression_options.h  extractor.h  solid_packer.h  source_scanner.h  temp_file_guard.h  transform_pipeline.h
native/engine/reference/: devzip_reference.py
native/engine/src/: archive_format.cpp  extractor.cpp  solid_packer.cpp  source_scanner.cpp  temp_file_guard.cpp  transform_pipeline.cpp
native/engine/src/backends/: best_of_n_backend.cpp  best_of_three_backend.cpp  best_of_two_backend.cpp  bsc_backend.cpp  dzcm_backend.cpp  libzpaq_backend.cpp  lzma_sdk_backend.cpp  ppmd_backend.cpp  selective_zpaq_backend.cpp
native/engine/src/cli/: main.cpp
native/engine/src/transforms/: code_dictionary.cpp  fastcdc_chunker.cpp  stream_normalizer.cpp
native/engine/tests/: corpus_ratio_tests.cpp  extract_integrity_tests.cpp  failure_cleanup_tests.cpp  roundtrip_archive_tests.cpp  roundtrip_metadata_tests.cpp  routing_ratio_tests.cpp  test_harness.h  test_main.cpp  transform_ratio_tests.cpp  transform_roundtrip_tests.cpp
python_tests/: test_benchmarks.py  test_reference_codec.py
